DMetadata getComments and setComments must be symmetric. Loading a QString from a QByteArray means interpreting the data as classic C String, but the data may be UTF8.

BUG: 139313

svn path=/trunk/extragear/graphics/digikam/; revision=618621